# rvim

./: Cargo.toml  Cross.toml  Makefile  README.md  TODO  rvim.1  x86_64-unknown-none.json
.github/workflows/: build.yml  ci.yml  release.yml
src/: build.rs  document.rs  editor.rs  filetype.rs  highlighting.rs  main.rs  row.rs  terminal.rs
syntax-files/: main.js  test.c  test.cc  test.hs  test.md  test.rb  test.sh
