[package]
name = "rvim"
version = "0.0.2"
edition = "2018"
default-run = "rvim"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/takashiidobe/rvim"
documentation = "https://docs.rs/rvim"
description = "A simple pager in rust"

[dependencies]
termion = "1.5.6"
unicode-segmentation = "1.8.0"
man = { version = "0.3.0", optional = true }

[[bin]]
name = "man"
path = "src/build.rs"
required-features = ["build_deps"]

[features]
build_deps = ["man"]
