[package]
name = "rvim"
version = "0.0.8"
edition = "2021"
default-run = "rvim"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/takashiidobe/rvim"
documentation = "https://docs.rs/rvim"
description = "A text editor in rust"

[dependencies]
# termion = "1.5.6"
unicode-segmentation = "1.8.0"
man = { version = "0.3.0", optional = true }
crossterm = "0.22.1"

[[bin]]
name = "man"
path = "src/build.rs"
required-features = ["build_deps"]

[features]
build_deps = ["man"]

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
